--- a/public/index.html
+++ b/public/index.html
@@ -40,16 +40,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-<script> 
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('sw-cached-site.js', function() {
-      navigator.serviceWorker.register('service-worker.js', {
-        scope: '/',
-      });
-    });
-  } 
-  window.process = { env: { NODE_ENV: 'production' } };
-</script>
+    <script> 
+      if ('mockServiceWorker' in navigator) {
+        window.addEventListener('sw-cached-site.js', function() {
+          navigator.serviceWorker.register('mockServiceWorker.js', {
+            scope: '/',
+          });
+        });
+      } 
+      window.process = { env: { NODE_ENV: 'production' } };
+    </script>
 
     </script>
   </body>
