--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico?v=2">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -39,18 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-<script> 
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('sw-cached-site.js', function() {
-      navigator.serviceWorker.register('service-worker.js', {
-        scope: '/',
-      });
-    });
-  } 
-  window.process = { env: { NODE_ENV: 'production' } };
-</script>
-
     </script>
   </body>
 </html>
